@@ -20,7 +20,6 @@
 package org.checkstyle.suppressionxpathfilter.naming;
 
 import java.io.File;
-import java.util.Collections;
 import java.util.List;
 
 import org.checkstyle.suppressionxpathfilter.AbstractXpathTestSupport;
@@ -59,7 +58,7 @@ public class XpathRegressionIllegalIdentifierNameTest extends AbstractXpathTestS
                 AbstractNameCheck.MSG_INVALID_PATTERN, "var", format),
             };
 
-        final List<String> expectedXpathQueries = Collections.singletonList(
+        final List<String> expectedXpathQueries = List.of(
             "/COMPILATION_UNIT/RECORD_DEF"
                 + "[./IDENT[@text='InputXpathIllegalIdentifierNameOne'"
                 + "]]/RECORD_COMPONENTS/RECORD_COMPONENT_DEF/IDENT[@text='var']"
@@ -84,7 +83,7 @@ public class XpathRegressionIllegalIdentifierNameTest extends AbstractXpathTestS
                 AbstractNameCheck.MSG_INVALID_PATTERN, "te$t", format),
             };
 
-        final List<String> expectedXpathQueries = Collections.singletonList(
+        final List<String> expectedXpathQueries = List.of(
             "/COMPILATION_UNIT/CLASS_DEF"
                 + "[./IDENT[@text='InputXpathIllegalIdentifierNameTwo']"
                 + "]/OBJBLOCK/METHOD_DEF[./IDENT[@text='foo']]/PARAMETERS/PARAMETER_DEF"
